<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.saed">

    <ImageView
        android:id="@+id/sing_in__img"
        android:layout_width="wrap_content"
        android:layout_height="184dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_team_work_amico"
        android:transitionName="saed1" />

    <TextView
        android:id="@+id/sing_in_txt_bold"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/bangers"
        android:gravity="center"
        android:text="@string/come_back"
        android:textColor="#000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/sing_in_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:fontFamily="@font/capriola"
        android:text="@string/sing_in"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sing_in_user_box"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/username"
        app:boxStrokeColor="@color/darck"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/darck"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sing_in_user"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:drawablePadding="3dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sing_in_pass_box"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/pass"
        app:boxStrokeColor="@color/darck"
        app:hintTextColor="@color/darck"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/sing_in_pass"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:drawablePadding="3dp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sing_in_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="start"
        android:layout_marginStart="35dp"
        android:background="#0001DFFF"
        android:elevation="0dp"
        android:text="@string/forget_password"
        android:textColor="#01DFFF" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/sing_in_sin_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#0001DFFF"
            android:elevation="0dp"
            android:text="@string/sing_in_btn"
            android:textColor="#000"
            android:layout_marginEnd="30dp"
            />

        <Button
            android:id="@+id/sing_in_register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:background="#0001DFFF"
            android:elevation="0dp"
            android:text="@string/Register"
            android:textColor="#000" />
    </LinearLayout>


</LinearLayout>